--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -22,6 +22,7 @@ html::-webkit-scrollbar {
 
 html::-webkit-scrollbar-track {
     background-color: #13131A;
+    width: 10px;
 }
 
 html::-webkit-scrollbar {
@@ -34,6 +35,14 @@ body {
     line-height: inherit;
     font-weight: 400;
     background-color: #020100;
+}
+
+form input {
+    font-family: Roboto, sans-serif;
+    color: #FAFAFB;
+    line-height: 16px;
+    font-size: 14px;
+    letter-spacing: .1px;
 }
 
 fieldset {
@@ -243,7 +252,7 @@ fieldset {
     right: 0;
     left: 0;
     bottom: 0;
-    max-height: 320px;
+    max-height: 335px;
     margin: auto;
     z-index: 1;
     max-width: 370px;
@@ -304,7 +313,7 @@ fieldset {
     position: absolute;
     top: 0;
     left: 15px;
-    line-height: 47px;
+    line-height: 49px;
     color: #92929D;
     user-select: none;
     pointer-events: none;
@@ -594,7 +603,7 @@ fieldset {
     top: 0;
     left: 0;
     opacity: .25;
-    z-index: -1;
+    z-index: 1;
 }
 
 .home .footer-wrap .footer-bottom-bg {
@@ -666,7 +675,7 @@ fieldset {
     width: 100%;
     height: 100%;
     opacity: .4;
-    z-index: -1;
+    z-index: 1;
 }
 
 .home .steps .step .step-bg .character {
@@ -677,6 +686,7 @@ fieldset {
     bottom: 0;
     opacity: .15;
     filter: grayscale(100%);
+    z-index: 2;
 }
 
 .home .steps .step2 .step-bg .character {
